[package]
name = "bitcoin-wallet"
version = "1.1.0"
authors = ["Tamas Blummer <tamas.blummer@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/rust-bitcoin/rust-wallet/"
repository = "https://github.com/rust-bitcoin/rust-wallet/"
documentation = "https://github.com/rust-bitcoin/rust-wallet/"
description = "Wallet library for Bitcoin"
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"

[dependencies]
bitcoin = { version= "0.29.2"}
rand= "0.8.5"
rust-crypto = "0.2"
serde = "1"
serde_derive = "1"

[dev-dependencies]
bitcoin = { version= "0.29.2"}
serde_json="1"
hex = "0.4.3"